syntax = "proto3";
import "const.proto";
import "excelconst.proto";
import "data.proto";

package Proto;


message C2B_JoinBattle
{
	 int32 MapID =1;
	 string Session=2;
	 string AccountUuid=3;
	 int32 Version=4;
}

message B2C_JoinBattle
{
	 ErrorCode Code=1;
}

message C2B_ExitBattle
{
	 string AccountUuid = 1;
}

message B2C_ExitBattle
{
	 ErrorCode Code=1;
}

message C2B_ViewPlayerHero
{
	string AccountUuid = 1;
}

message B2C_ViewPlayerHero
{
	ErrorCode Code = 1;
	string Name = 2;
	int32 Level =3;
	int32 HeroID = 4;
	repeated PlayerItem WaerEquips = 5;
	repeated HeroMagic Magics = 6; 
}

message Action_CollectItem
{
	int32 Index =1;
}
//点击释放技能
message Action_ClickSkillIndex
{
	 int32 MagicId = 1;//技能id
	 Vector3 Rotation = 3;
	 Vector3 Position =4;
}
//自动寻敌
message Action_AutoFindTarget
{
	 bool Auto =1;
}

message Action_MoveJoystick
{
	Vector3 WillPos =1; // 400ms 后位置
	Vector3 Position = 2;//当前位置
}

message Action_StopMove
{
	Vector3 StopPos = 1;//结束位置
}

message Action_NormalAttack
{

}

message Action_UseItem
{
	int32 ItemId =1;
}

message Action_LookRotation
{
	float LookRotationY =1; //
}
//notify action

//元素退出场景
message Notify_ElementExitState
{
	 int32 Index=1;
}

//创建一个释放者
message Notify_CreateReleaser
{
    int32 Index=1;
	int32 ReleaserIndex=2;
	int32 TargetIndex=3;
	string MagicKey=4;
	Vector3 Position = 5;
	ReleaserModeType RMType = 6;
}

//战斗中的角色
message Notify_CreateBattleCharacter
{
	 int32 Index=1;
	 string AccountUuid=2;//用户ID
	 int32 ConfigID=3; //配表ID
	 int32 TeamIndex=4; //阵营ID
	 Vector3 Position=5;//位置
	 Vector3 Forward=6;//朝向
	 int32 Level=7; //等级
	 int32 Hp = 8;
	 int32 MaxHp = 9;
	 string Name=14; //名字
	 float Speed=15;//移动速度
	 repeated HeroMagicData Cds = 16;
	 int32 Mp =17;
	 int32 MpMax = 18;
	 int32 OwnerIndex =19;
}

//创建一个飞行物
message Notify_CreateMissile
{
	int32 Index =1;
	int32 ReleaserIndex=2;
	string ResourcesPath=3;
	float Speed=4;//速度
	string FromBone=6;
	string ToBone=7;
	Vector3 Offset=8;
}


message Notify_CharacterSetPosition
{
	 int32 Index=1;
	 Vector3 Position = 2;//
}

message Notify_CharacterSpeed
{
	int32 Index =1 ;
	float Speed = 2;
}
message Notify_LookAtCharacter
{
	 int32 Index=1;//源
	 int32 Target=2;//目标
}

message Notify_CharacterMoveTo
{
	int32 Index = 1;
	Vector3 Position=2;
	Vector3 Target = 3;
	float StopDis = 4;
}

message Notify_CharacterStopMove
{
	int32 Index = 1;
	Vector3 Position=2;
}

message Notify_CharacterDeath
{
	int32 Index =1;
}

message Notify_CharacterPriorityMove
{
	int32 Index =1;
	float PriorityMove =2;
}

message Notify_CharacterSetScale
{
	int32 Index =1;
    float Scale =2;
}

message Notify_CharacterAttachMagic
{	
	int32 Index  =1;
	int32 MagicId =2;
	float CompletedTime = 3;
	MagicType mType = 4;
}

//属性修改
message Notify_PropertyValue
{
	 int32 Index=1;
	 HeroPropertyType Type=2;
	 int32 FinallyValue=3;
}

//广播血量变化
message Notify_HPChange
{
	 int32 Index=1; 
	 int32 Hp=2; //最终HP 
	 int32 Cur=3;//HP变化值
	 int32 Max=4;
}


message Notify_MPChange
{
	 int32 Index=1; 
	 int32 Mp=2; //最终MP 
	 int32 Cur=3;//MP变化值
	 int32 Max=4;
}


message Notify_DamageResult
{
	 int32 Index=1;
	 int32 TargetIndex=2;
	 bool IsMissed=3;
	 int32 Damage=4;
	 int32 CrtMult = 5;//暴击
}

message Notify_Drop
{
	 int32 Index = 1;
	 PlayerItem Item = 2;
	 int32 TeamIndex = 3;
	 int32 GroupIndex=4;
	 Vector3 Pos = 5;
}

message Notify_PlayerJoinState
{
     string AccountUuid=1;
     float TimeNow=2;
	 int32 Gold=3;
	 PlayerPackage Package=4;//道具列表
	 DHero Hero = 5;
}

message Notify_CharacterLock
{
	int32 Index =1;
	int32 Lock = 2;
}

message Notify_CharacterPush
{
	int32 Index =1;
	Vector3 Length =2;
	Vector3 Speed =3;
	Vector3 StartPos= 4;
}

message Notify_CharacterRelive
{
	int32 Index =1;
}

message Notify_CharacterLevel
{
	int32 Index =1 ;
	int32 Level =2;
}

message Notify_BattleItemChangeGroupIndex
{
	int32 Index =1 ;
	int32 GroupIndex =2;
}

message Notify_DropGold
{
	int32 TotalGold=1;
	int32 Gold=2;
}

message Notify_PlayTimeLine
{
	int32 Index = 1;
	string Path = 2;
	int32 TargetIndex =3;
	int32 Type =4; //事件类型
	int32 PlayIndex =5;
}

message Notify_CancelTimeLine
{
	int32 Index =1;
	int32 PlayIndex =2;
}

message Notify_SyncServerTime
{
	float ServerNow = 1;
}

message Notify_CharacterRotation
{
	int32 Index=1;
	float RotationY =2;
}

message Notify_CharacterExp
{
	int32 Exp = 1;
	int32 OldExp = 2;
	int32 Level = 3;
	int32 OldLeve = 4;
}

message Notify_CharacterTeamIndex
{
	int32 Index = 1;
	int32 TeamIndex = 2;
	int32 OwnerIndex =3;
}


service NotifyService
{	
	rpc CharacterPosition(Void) returns (Notify_CharacterSetPosition){};//2
	rpc CreateBattleCharacter(Void) returns (Notify_CreateBattleCharacter){};//3
	rpc CreateMissile(Void) returns (Notify_CreateMissile){};//4
	rpc CreateReleaser(Void) returns (Notify_CreateReleaser){};//5
	rpc DamageResult(Void) returns ( Notify_DamageResult);//6
	rpc Drop(Void) returns (Notify_Drop){};//7
	rpc ElementExitState(Void) returns (Notify_ElementExitState){};//8
	rpc HPChange(Void) returns (Notify_HPChange); //11
	rpc LookAtCharacter(Void) returns (Notify_LookAtCharacter);//14
	rpc MPChange(Void) returns (Notify_MPChange);//15
	rpc PlayerJoinState(Void) returns (Notify_PlayerJoinState);//16
	rpc PropertyValue(Void) returns (Notify_PropertyValue){ };//17
	rpc CharacterMoveTo(Void) returns (Notify_CharacterMoveTo){};//20
	rpc CharacterStopMove(Void) returns (Notify_CharacterStopMove);//21
	rpc CharacterDeath(Void) returns (Notify_CharacterDeath);//22
	rpc CharacterPriorityMove(Void) returns (Notify_CharacterPriorityMove);//23
	rpc CharacterSetScale(Void) returns (Notify_CharacterSetScale){};//24
	rpc CharacterAttachMagic(Void) returns (Notify_CharacterAttachMagic);//25
	rpc CharacterSpeed(Void) returns(Notify_CharacterSpeed){};//27
	rpc CharacterLock(Void) returns (Notify_CharacterLock){};//28
	rpc CharcaterPush(Void) returns (Notify_CharacterPush){};//29
	rpc CharacterRelive(Void) returns (Notify_CharacterRelive){};//30
	rpc BattleItemChangeGroupIndex (Void) returns (Notify_BattleItemChangeGroupIndex){};//31
	rpc DropGold (Void) returns (Notify_DropGold){};//32
	rpc SyncServerTime (Void) returns (Notify_SyncServerTime){};//33
	rpc PlayTimeLine (Void) returns (Notify_PlayTimeLine){};//35
	rpc CharacterRotation(Void) returns(Notify_CharacterRotation){};//36
	rpc CharacterExp(Void) returns (Notify_CharacterExp){};//37
	rpc CharacterLevel (Void) returns (Notify_CharacterLevel){};//38
	rpc CharacterTeamIndex (Void) returns (Notify_CharacterTeamIndex){};//39
	rpc CancelTimeLine (Void) returns (Notify_CancelTimeLine){};//40
}

service ActionService
{
	rpc ClickSkillIndex(Action_ClickSkillIndex)returns(Void){};//1
	rpc AutoFindTarget(Action_AutoFindTarget)returns(Void){};//2
	rpc NormalAttack (Action_NormalAttack) returns (Void){};//4
	rpc CollectItem (Action_CollectItem) returns (Void){};//5
	rpc UseItem (Action_UseItem) returns (Void){};//6
	rpc MoveJoystick (Action_MoveJoystick) returns (Void){};//7
	rpc StopMove (Action_StopMove) returns (Void){};//8
	rpc LookRotation (Action_LookRotation) returns (Void){};//9
}

service BattleServerService
{
	rpc ExitBattle(C2B_ExitBattle)returns(B2C_ExitBattle){};//1
	rpc JoinBattle(C2B_JoinBattle)returns (B2C_JoinBattle){};//3
	rpc ViewPlayerHero(C2B_ViewPlayerHero) returns (B2C_ViewPlayerHero){};//4
}